added form stuff
changed values & added buttons

--- a/style.css
+++ b/style.css
@@ -17,6 +17,14 @@ footer p {
   color:#FBFFF1;
 }
 
+form {
+  margin-left: 210px;
+}
+
+textarea {
+  display:block;
+  width:80%
+}
 
 .logoHeader {
     display: flex;
