--- a/style.css
+++ b/style.css
@@ -76,14 +76,14 @@ textarea {
 
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 375px 375px 375px;
   align-content: center;
   padding: 10px;
 }
 
 .grid-container1 {
   display:grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: 562.5px 562.5px;
   align-content: center;
   padding: 10px;
 }
