--- a/style.css
+++ b/style.css
@@ -92,6 +92,10 @@ textarea {
   background-color: rgba(255, 255, 255, 0.8);
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
-  font-size: 30px;
   text-align: center;
+}
+
+.classes {
+  display: flex;
+  justify-content: center;
 }
