--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ textarea {
   width:80%
 }
 
+img {
+  display: block;
+  margin: auto;
+}
+
 .logoHeader {
     display: flex;
     justify-content:center;
@@ -76,14 +81,14 @@ textarea {
 
 .grid-container {
   display: grid;
-  grid-template-columns: 375px 375px 375px;
+  grid-template-columns: auto auto auto;
   align-content: center;
   padding: 10px;
 }
 
 .grid-container1 {
   display:grid;
-  grid-template-columns: 562.5px 562.5px;
+  grid-template-columns: auto auto;
   align-content: center;
   padding: 10px;
 }
@@ -93,9 +98,5 @@ textarea {
   border: 1px solid rgba(0, 0, 0, 0.8);
   padding: 20px;
   text-align: center;
-}
-
-.classes {
-  display: flex;
-  justify-content: center;
+  align-content: center;
 }
