--- a/style.css
+++ b/style.css
@@ -12,9 +12,12 @@ footer {
 }
 
 footer p {
-  margin-left: 265px;
   text-align: center;
   color:#FBFFF1;
+}
+
+form {
+  margin: 20px;
 }
 
 textarea {
@@ -67,7 +70,7 @@ img {
 
 /* Style the content */
 .content {
-    padding-left: 20px;
+  margin:30px;
 }
 
 .DomNChels {
